# obs-localvocal

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/scripts/: .Aptfile  .build.zsh  .package.zsh  Build-AwsSdk-Linux.zsh  Build-AwsSdk-Windows.ps1  Build-AwsSdk-macOS.zsh  Build-Windows.ps1
.github/scripts/utils.zsh/: check_linux  setup_linux
.github/workflows/: build-project.yaml  check-format.yaml  push.yaml
cmake/: BuildCTranslate2.cmake  BuildICU.cmake  BuildSentencepiece.cmake  BuildWhispercpp.cmake  BuildWhispercppHelpers.cmake  FetchOnnxruntime.cmake
cmake/common/: FindOnnxruntime.cmake  bootstrap.cmake  buildspec_common.cmake
cmake/linux/: defaults.cmake
cmake/macos/: compilerconfig.cmake  helpers.cmake
cmake/windows/: compilerconfig.cmake  helpers.cmake
data/locale/: en-GB.ini  en-US.ini  fr-FR.ini
data/models/: models_directory.json
flatpak/: README.md  build.sh  cargo-sources.json  com.obsproject.Studio.Plugin.LocalVocal.metainfo.xml  com.obsproject.Studio.Plugin.LocalVocal.yaml
flatpak/patches/: 0001-BuildCTranslate2-use-system-option.patch  0002-BuildSentencepiece-use-system-option.patch
src/: plugin-main.c  transcription-filter-callbacks.cpp  transcription-filter-callbacks.h  transcription-filter-data.h  transcription-filter-properties.cpp  transcription-filter-properties.h  transcription-filter-utils.cpp  transcription-filter.cpp  transcription-filter.h  transcription-utils.cpp
src/model-utils/: model-infos.cpp
src/tests/: localvocal-offline-test.cpp
src/translation/: translation-utils.cpp
src/translation/cloud-translation/: claude.h  custom-api.cpp
src/whisper-utils/: aws-memory-manager.h  cloud-speech.cpp  cloud-speech.h  ssl-utils.cpp  ssl-utils.h  token-buffer-thread.cpp  token-buffer-thread.h  vad-processing.cpp  whisper-model-utils.cpp  whisper-params.cpp  whisper-processing.cpp  whisper-processing.h
